[ADD] Odoo Modul and create from sales from voucher

--- a/App.config
+++ b/App.config
@@ -7,5 +7,9 @@
 		<add key="ApplicationPin" value="1234" />
 		<add key="MidtransServerKey" value="" />
 		<add key="IsProduction" value="false" />
+		<add key="OdooServer" value="https://sedaribooth.odoo.com" />
+		<add key="OdooUsername" value="" />
+		<add key="OdooPassword" value="" />
+		<add key="OdooDatabase" value="" />
 	</appSettings>
 </configuration>
