--- a/App.config
+++ b/App.config
@@ -1,15 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<appSettings>
-		<add key="DSLRBoothPath" value="" />
-		<add key="PaymentGatewayUrl" value="" />
+		<add key="DSLRBoothPath" value="C:\Program Files\dslrBooth\dslrBooth.exe" />
+		<add key="PaymentGatewayUrl" value="https://radit.tun.arkana.app/payment" />
 		<add key="ServicePrice" value="35000" />
 		<add key="ApplicationPin" value="1234" />
-		<add key="MidtransServerKey" value="" />
+		<add key="MidtransServerKey" value="SB-Mid-server-7pjxM--Njj9hHfBcyChh1Z4l" />
 		<add key="IsProduction" value="false" />
 		<add key="OdooServer" value="https://sedaribooth.odoo.com" />
-		<add key="OdooUsername" value="" />
-		<add key="OdooPassword" value="" />
-		<add key="OdooDatabase" value="" />
+		<add key="OdooUsername" value="sedari@sedari.id" />
+		<add key="OdooPassword" value="sedari123" />
+		<add key="OdooDatabase" value="sedaribooth" />
 	</appSettings>
 </configuration>
