--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,26 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+# General macOS files
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+# Thumbnails
+._*
+
+# Files that might appear on external disk
+.Spotlight-V100
+.Trashes
+
+# macOS file tags
+._*
+
+# macOS folder attributes
+.DS_Store
+.Spotlight-V100
+.Trashes
+
