[ADD] Mqtt Broker

--- a/App.config
+++ b/App.config
@@ -2,7 +2,7 @@
 <configuration>
 	<appSettings>
 		<add key="DSLRBoothPath" value="C:\Program Files\dslrBooth\dslrBooth.exe" />
-		<add key="PaymentGatewayUrl" value="https://radit.tun.arkana.app/payment" />
+		<add key="PaymentGatewayUrl" value="https://payment.haragreen.com/payment" />
 		<add key="ServicePrice" value="35000" />
 		<add key="ApplicationPin" value="1234" />
 		<add key="MidtransServerKey" value="SB-Mid-server-7pjxM--Njj9hHfBcyChh1Z4l" />
@@ -11,5 +11,9 @@
 		<add key="OdooUsername" value="sedari@sedari.id" />
 		<add key="OdooPassword" value="sedari123" />
 		<add key="OdooDatabase" value="sedaribooth" />
+		<add key="MqttHost" value="y1c4d1ec.ala.asia-southeast1.emqxsl.com" />
+		<add key="MqttPort" value="8883" />
+		<add key="MqttUsername" value="sedari" />
+		<add key="MqttPassword" value="@mpera50A" />
 	</appSettings>
 </configuration>
