--- a/App.config
+++ b/App.config
@@ -15,5 +15,7 @@
 		<add key="MqttPort" value="8883" />
 		<add key="MqttUsername" value="sedari" />
 		<add key="MqttPassword" value="@mpera50A" />
+		<add key="MachineId"/>
+		<add key="Activated" value="false"/>
 	</appSettings>
 </configuration>
