--- a/MiddleBooth.csproj
+++ b/MiddleBooth.csproj
@@ -30,6 +30,7 @@
     <PackageReference Include="Serilog" Version="4.0.1" />
     <PackageReference Include="Serilog.Extensions.Logging" Version="8.0.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
+    <PackageReference Include="System.Management" Version="6.0.2" />
   </ItemGroup>
 
   <ItemGroup>
