[ADD] Footer Logo

--- a/MiddleBooth.csproj
+++ b/MiddleBooth.csproj
@@ -12,6 +12,8 @@
   <ItemGroup>
     <None Remove="Resources\bank_logo.png" />
     <None Remove="Resources\mastercard_logo.png" />
+    <None Remove="Resources\purikura.png" />
+    <None Remove="Resources\purikura_logo.png" />
     <None Remove="Resources\qris_logo.png" />
     <None Remove="Resources\visa_logo.png" />
   </ItemGroup>
@@ -36,6 +38,7 @@
   <ItemGroup>
     <Resource Include="Resources\bank_logo.png" />
     <Resource Include="Resources\mastercard_logo.png" />
+    <Resource Include="Resources\purikura.png" />
     <Resource Include="Resources\qris_logo.png" />
     <Resource Include="Resources\visa_logo.png" />
   </ItemGroup>
