[ADD] Background Images

--- a/App.config
+++ b/App.config
@@ -17,5 +17,7 @@
 		<add key="MqttPassword" value="@mpera50A" />
 		<add key="MachineId"/>
 		<add key="Activated" value="false"/>
+		<add key="ProductImagePath" value="" />
+		<add key="MainBackgroundImagePath" value="" />
 	</appSettings>
 </configuration>
