[REM] Background path

--- a/App.config
+++ b/App.config
@@ -17,7 +17,7 @@
 		<add key="MqttPassword" value="@mpera50A" />
 		<add key="MachineId"/>
 		<add key="Activated" value="false"/>
-		<add key="ProductImagePath" value="" />
-		<add key="MainBackgroundImagePath" value="" />
+		<add key="ProductImage" value="" />
+		<add key="MainBackgroundImage" value="" />
 	</appSettings>
 </configuration>
