--- a/App.config
+++ b/App.config
@@ -7,10 +7,10 @@
 		<add key="ApplicationPin" value="1234" />
 		<add key="MidtransServerKey" value="SB-Mid-server-7pjxM--Njj9hHfBcyChh1Z4l" />
 		<add key="IsProduction" value="false" />
-		<add key="OdooServer" value="https://sedaribooth.odoo.com" />
-		<add key="OdooUsername" value="sedari@sedari.id" />
-		<add key="OdooPassword" value="sedari123" />
-		<add key="OdooDatabase" value="sedaribooth" />
+		<add key="OdooServer" value="https://middlebooth.haragreen.com" />
+		<add key="OdooUsername" value="admin" />
+		<add key="OdooPassword" value="sedari" />
+		<add key="OdooDatabase" value="middlebooth" />
 		<add key="MqttHost" value="y1c4d1ec.ala.asia-southeast1.emqxsl.com" />
 		<add key="MqttPort" value="8883" />
 		<add key="MqttUsername" value="sedari" />
