[FIX] Disposable Notif double order

--- a/App.config
+++ b/App.config
@@ -2,6 +2,7 @@
 <configuration>
 	<appSettings>
 		<add key="DSLRBoothPath" value="C:\Program Files\dslrBooth\dslrBooth.exe" />
+		<add key="DSLRBoothPassword"/>
 		<add key="PaymentGatewayUrl" value="https://payment.haragreen.com/payment" />
 		<add key="ServicePrice" value="35000" />
 		<add key="ApplicationPin" value="1234" />
