[ADD] qris page enhancement

--- a/MiddleBooth.csproj
+++ b/MiddleBooth.csproj
@@ -14,6 +14,7 @@
     <None Remove="Resources\background.png" />
     <None Remove="Resources\purikura.png" />
     <None Remove="Resources\purikura_logo.png" />
+    <None Remove="Resources\qris_logo.png" />
   </ItemGroup>
 
   <ItemGroup>
@@ -36,6 +37,7 @@
   <ItemGroup>
     <Resource Include="Resources\background.png" />
     <Resource Include="Resources\purikura.png" />
+    <Resource Include="Resources\qris_logo.png" />
   </ItemGroup>
 
   <ItemGroup>
